--- a/Jimbo/Jimbo/Jimbo.vcxproj
+++ b/Jimbo/Jimbo/Jimbo.vcxproj
@@ -133,14 +133,18 @@
     <ClInclude Include="application\config.hpp" />
     <ClInclude Include="application\servicelocator.hpp" />
     <ClInclude Include="audio\jukebox.hpp" />
-    <ClInclude Include="Audio\Silent\silentsound.hxx" />
-    <ClInclude Include="Audio\irrKlang\irrklangsound.hxx" />
-    <ClInclude Include="Audio\Silent\silentsoundmanager.hxx" />
-    <ClInclude Include="Audio\irrKlang\irrklangsoundmanager.hxx" />
-    <ClInclude Include="Audio\sound.hpp" />
-    <ClInclude Include="Audio\soundmanager.hpp" />
+    <ClInclude Include="audio\resource\soundresource.hxx" />
+    <ClInclude Include="audio\resource\soundresourcefactory.hxx" />
+    <ClInclude Include="audio\silent\silentsound.hxx" />
+    <ClInclude Include="audio\irrklang\irrklangsound.hxx" />
+    <ClInclude Include="audio\silent\silentsoundmanager.hxx" />
+    <ClInclude Include="audio\irrklang\irrklangsoundmanager.hxx" />
+    <ClInclude Include="audio\sound.hpp" />
+    <ClInclude Include="audio\soundmanager.hpp" />
     <ClInclude Include="application\application.hpp" />
     <ClInclude Include="log\logmessage.hxx" />
+    <ClInclude Include="log\util\executiontime.hxx" />
+    <ClInclude Include="resource\datasource\passthrough.hpp" />
     <ClInclude Include="resource\log\resourcelog.hxx" />
     <ClInclude Include="log\logger.hpp" />
     <ClInclude Include="log\logengine.hxx" />
@@ -149,11 +153,16 @@
     <ClInclude Include="log\logging.hpp" />
     <ClInclude Include="resource\event\resourceloadedevent.hxx" />
     <ClInclude Include="resource\event\resourcereleasedevent.hxx" />
-    <ClInclude Include="resource\loader\fileloader.hpp" />
+    <ClInclude Include="resource\datasource\datafromfile.hpp" />
     <ClInclude Include="resource\resource.hpp" />
+    <ClInclude Include="resource\resourcefactory.hxx" />
     <ClInclude Include="resource\resourceid.hpp" />
-    <ClInclude Include="resource\resourceloader.hpp" />
+    <ClInclude Include="resource\resourcedatasource.hpp" />
+    <ClInclude Include="resource\resourceloadstrategy.hxx" />
     <ClInclude Include="resource\resourcemanager.hpp" />
+    <ClInclude Include="resource\strategy\lrucache.hxx" />
+    <ClInclude Include="resource\strategy\scorebased.hxx" />
+    <ClInclude Include="resource\strategy\simple.hxx" />
     <ClInclude Include="resource\thread\resourcethreadpool.hxx" />
     <ClInclude Include="resource\thread\threadpool.hxx" />
     <ClInclude Include="resource\thread\threadsafequeue.hxx" />
@@ -162,39 +171,40 @@
     <ClInclude Include="test\testengine.hpp" />
     <ClInclude Include="test\component\proxy.hxx" />
     <ClInclude Include="log\logger\console.hxx" />
-    <ClInclude Include="Graphics\renderer.hpp" />
-    <ClInclude Include="Input\glfw\glfwinputmanager.hxx" />
-    <ClInclude Include="Input\inputlistener.hpp" />
-    <ClInclude Include="Input\inputmanager.hpp" />
-    <ClInclude Include="Input\inputsettings.hpp" />
-    <ClInclude Include="Input\keymapping.hpp" />
-    <ClInclude Include="Event\event.hpp" />
-    <ClInclude Include="Event\eventhandler.hpp" />
-    <ClInclude Include="Event\eventmanager.hpp" />
-    <ClInclude Include="Scene\scene.hpp" />
-    <ClInclude Include="Scene\scenemanager.hpp" />
+    <ClInclude Include="graphics\renderer.hpp" />
+    <ClInclude Include="input\glfw\glfwinputmanager.hxx" />
+    <ClInclude Include="input\inputlistener.hpp" />
+    <ClInclude Include="input\inputmanager.hpp" />
+    <ClInclude Include="input\inputsettings.hpp" />
+    <ClInclude Include="input\keymapping.hpp" />
+    <ClInclude Include="event\event.hpp" />
+    <ClInclude Include="event\eventhandler.hpp" />
+    <ClInclude Include="event\eventmanager.hpp" />
+    <ClInclude Include="scene\scene.hpp" />
+    <ClInclude Include="scene\scenemanager.hpp" />
     <ClInclude Include="test\component\event.hxx" />
-    <ClInclude Include="Jimbo.hpp" />
-    <ClInclude Include="Test\testscene.hxx" />
+    <ClInclude Include="jimbo.hpp" />
+    <ClInclude Include="test\testscene.hxx" />
     <ClInclude Include="resource\proxy.hpp" />
     <ClInclude Include="util\stringhash.hxx" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="application\config.cpp" />
     <ClCompile Include="application\servicelocator.cpp" />
-    <ClCompile Include="Audio\irrKlang\irrKlangSound.cpp" />
-    <ClCompile Include="Audio\irrKlang\irrKlangSoundManager.cpp" />
+    <ClCompile Include="audio\irrKlang\irrklangsound.cpp" />
+    <ClCompile Include="audio\irrKlang\irrklangsoundmanager.cpp" />
     <ClCompile Include="application\application.cpp" />
-    <ClCompile Include="Graphics\Renderer.cpp" />
-    <ClCompile Include="Input\glfw\glfwInputManager.cpp" />
-    <ClCompile Include="Input\InputManager.cpp" />
-    <ClCompile Include="Input\KeyMapping.cpp" />
-    <ClCompile Include="resource\loader\fileloader.cpp" />
+    <ClCompile Include="graphics\renderer.cpp" />
+    <ClCompile Include="input\glfw\glfwinputmanager.cpp" />
+    <ClCompile Include="input\inputmanager.cpp" />
+    <ClCompile Include="input\keymapping.cpp" />
+    <ClCompile Include="resource\datasource\datafromfile.cpp" />
+    <ClCompile Include="resource\datasource\passthrough.cpp" />
     <ClCompile Include="resource\resourcemanager.cpp" />
     <ClCompile Include="resource\thread\resourcethreadpool.cpp" />
     <ClCompile Include="scene\scene.cpp" />
-    <ClCompile Include="Scene\SceneManager.cpp" />
-    <ClCompile Include="Test\TestScene.cpp" />
+    <ClCompile Include="scene\scenemanager.cpp" />
+    <ClCompile Include="test\testscene.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
